# AdventOfCode2022

./: .flake8  .gitignore  Makefile  README.md  mypy.ini  pyproject.toml
day01/: .flake8  Makefile  README.md  pyproject.toml
day01/src/: main.py  submit.py
day02/: README.md  pom.xml  pyproject.toml
day02/src/: submit.py
day02/src/main/kotlin/: Main.kt
day03/: Makefile  README.md  pyproject.toml
day03/src/: submit.py
day04/: README.md  pyproject.toml
day04/src/: main.py  submit.py
src/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day_template.py  run.py  submit.py  utils.py
src/day01/: answers.py
src/day02/: answers.py
src/day03/: answers.py
src/day04/: answers.py
tests/: test_day_03.py  test_day_05.py  test_day_06.py  test_day_07.py  test_day_08.py  test_day_09.py  test_day_10.py  test_day_11.py  test_utils.py
