[tool.poetry]
name = "AdventOfCode2022"
version = "0.1.0"
description = ""
authors = ["Surya Dutta <surya.dutta@spothero.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
advent-of-code-data = "^1.3.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
black = ">=22.10.0"
flake8 = ">=6.0.0"
mypy = ">=0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
