[tool.poetry]
name = "day01"
version = "0.1.0"
description = ""
authors = ["Surya Dutta <surya.dutta@spothero.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11"
advent-of-code-data = ">=1.2.2"

[tool.poetry.group.dev.dependencies]
black = ">=22.10.0"
flake8 = ">=6.0.0"
mypy = ">=0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
